# WSharing

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat
languages/: english.json  german.json
src/: App.cpp  App.h  WSharing.manifest  lang.rc  main.cpp  version.rc
src/core/: AppLog.h  Config.cpp  Config.h  Discovery.cpp  Discovery.h  Lang.cpp  Lang.h  StringUtils.h  TrayIcon.cpp  TrayIcon.h
src/core/webdav/: WebDavHandlers.cpp  WebDavHandlers.h  WebDavHttp.h  WebDavServer.cpp  WebDavServer.h
src/design/: Colors.h  Strings.h
src/network/: DriveMounter.cpp  DriveMounter.h  SmbProtocol.cpp  SmbProtocol.h
src/ui/: ClientPage.cpp  HostPage.cpp  LogPage.cpp  SettingsPage.cpp  Sidebar.cpp  Toast.cpp
src/window/: DX11Window.cpp
